# doc-flow

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  langgraph.json  pyproject.toml
deploy/: README.md  doc-flow.service  nginx-doc-flow.conf
docs/plans/: 2026-03-10-agent-work-dir-design.md  2026-03-10-agent-work-dir.md  2026-03-10-config-module-design.md  2026-03-10-config-module.md  2026-03-10-graph-module-design.md  2026-03-10-graph-module.md  2026-03-10-tools-logging-design.md  2026-03-10-tools-logging.md  2026-03-11-chainlit-integration-design.md  2026-03-11-chainlit-integration.md
schema/: api_index.sql
scripts/: index_docs.py
src/: app.py
src/config/: __init__.py  llm.py  settings.py
src/generator/: __init__.py  __main__.py  config.py  discovery.py  graph.py  index.py  runner.py
src/graph/: __init__.py  graph.py  nodes.py
src/logs/: __init__.py  formatter.py  setup.py
src/prompts/: __init__.py  loader.py
src/rag/: __init__.py  bm25_retriever.py  chunker.py  embeddings.py  hybrid_retriever.py  retriever.py
src/tools/: __init__.py  api_index.py  api_matcher.py  code_scanner.py  code_search.py  config_reader.py  doc_storage.py  file.py  file_reader.py  git_ops.py  utils.py
template/: .doc_gen.yaml  catalog-template.json
tests/: conftest.py  test_app.py  test_doc_storage.py  test_llm.py
tests/config/: test_log_settings.py  test_settings.py
tests/generator/: test_cli.py  test_config.py  test_discovery.py  test_graph.py  test_index.py  test_runner.py
tests/graph/: test_doc_gen_dispatcher.py  test_doc_qa.py  test_graph.py  (+4 more)
(+72 files in other folders)
