[project]
name = "doc-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.10",
    "langchain-openai>=1.1.11",
    "langgraph>=1.0.10",
    "pydantic-settings>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
